# dns-propagation-checker

./: .gitignore  README.md  dns_propagation_checker.py  pyproject.toml
.github/workflows/: tests.yml
tests/: test_core.py
